[tool.poetry]
name = "app-p"
version = "0.1.0"
description = ""
authors = ["dhkimAI <dhkim@claion.co.kr>"]
readme = "README.md"
packages = [{include = "app_p"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.85.1"}


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pytest = "^7.1.3"
tox = "^3.26.0"
loguru = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
